--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=dice-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <meta name="google-site-verification" content="RFkowbiY0QmxU_fT83J5CIW6-fJmfx3Ev9V06RJiZqs" />
+    
     <title>Samuel Silva</title>
 
     <!-- Bootstrap Core CSS -->
