--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <i class="fa fa-user-circle fa-stack-1x" aria-hidden="true"></i>
                     </span>
                     <h3>PERFIL</h3>
-                    <p>Profesional con 10 años de experiencia en el área de las tecnologías de información, capaz de analizar, implementar y dar soporte a sistemas computacionales. Además, establece levantamientos de requerimientos computacionales, implantación de técnicas de programación y recuperación y administración de información.</p>
+                    <p>Profesional con 12 años de experiencia en el área de las tecnologías de información, capaz de analizar, implementar y dar soporte a sistemas computacionales. Además, establece levantamientos de requerimientos computacionales, implantación de técnicas de programación y recuperación y administración de información.</p>
                     
                     <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal_CV">
                         <i class="fa fa-address-card" aria-hidden="true"></i> CV</a>
@@ -203,6 +203,16 @@
                 <!-- ERP a medida 1.0-->
                 <!-- SIGE 2.0-->
                 <!-- Vigomaq 2.0-->
+                <div class="col-sm-12 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/gescol.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
                 <div class="col-sm-12 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
