--- a/index.html
+++ b/index.html
@@ -203,17 +203,17 @@
                 <!-- ERP a medida 1.0-->
                 <!-- SIGE 2.0-->
                 <!-- Vigomaq 2.0-->
-                <div class="col-sm-12 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/gescol.png" class="img-responsive" alt="Slice of cake">
+                        <img src="img/portfolio/yonley.png" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
-                <div class="col-sm-12 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -224,7 +224,7 @@
                     </a>
                 </div>
                 <!--SIGE-->
-                <div class="col-sm-12 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
