--- a/index.html
+++ b/index.html
@@ -223,6 +223,16 @@
                         <img src="img/portfolio/pilsoft.png" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/actis.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
                 <!--SIGE-->
                 <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
@@ -450,6 +460,80 @@
                                 </li>
                                 <li>Fecha:
                                     <strong><a href="http://gescol.cl">Septiembre 2013 a la fecha</a>
+                                    </strong>
+                                </li>
+                                <li>Servicio:
+                                    <strong><a href="http://gescol.cl">Desarrollo Web | Soportes Informáticos</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Actis SpA</h2>
+                            <hr >
+                            <img src="img/portfolio/actis.png" class="img-responsive img-centered" alt="">
+                            <p style="text-align: left;">Desarrollando en ambiente linux con el lenguaje php, laravel y el motor de base de datos Oracle. El proyecto usa como servidor de versiones Git. Mis funciones son la creación CMS ofertas para el Ministerio de Desarrollo Social.</p>
+                            <ul class="list-inline item-details">
+                                <li>Cliente:
+                                    <strong><a href="http://gescol.cl">Actis SpA</a>
+                                    </strong>
+                                </li>
+                                <li>Fecha:
+                                    <strong><a href="http://gescol.cl">Noviembre 2020 a Febrero 2021</a>
+                                    </strong>
+                                </li>
+                                <li>Servicio:
+                                    <strong><a href="http://gescol.cl">Desarrollo Web | Soportes Informáticos</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Sistemas Expertos SpA</h2>
+                            <hr >
+                            <img src="img/portfolio/seis.png" class="img-responsive img-centered" alt="">
+                            <p style="text-align: left;">Desarrollando en ambiente linux con el lenguaje php, prototype y el motor de base de datos PostgreSql. El proyecto usa como servidor de versiones Git. Mis funciones fueron la de actualización módulos Abastecimiento, Farmacia y Pabellón</p>
+                            <ul class="list-inline item-details">
+                                <li>Cliente:
+                                    <strong><a href="http://gescol.cl">Sistemas Expertos SpA</a>
+                                    </strong>
+                                </li>
+                                <li>Fecha:
+                                    <strong><a href="http://gescol.cl">Febrero 2019 a Octubre 2020</a>
                                     </strong>
                                 </li>
                                 <li>Servicio:
