--- a/index.html
+++ b/index.html
@@ -204,6 +204,37 @@
                 <!-- SIGE 2.0-->
                 <!-- Vigomaq 2.0-->
                 <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/actis.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <!--SIGE-->
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/seis.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/gescol.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -221,27 +252,6 @@
                             </div>
                         </div>
                         <img src="img/portfolio/pilsoft.png" class="img-responsive" alt="Slice of cake">
-                    </a>
-                </div>
-                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/actis.png" class="img-responsive" alt="Slice of cake">
-                    </a>
-                </div>
-                <!--SIGE-->
-                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/gescol.png" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 
