--- a/index.html
+++ b/index.html
@@ -310,17 +310,17 @@
                     <div class="row">
                         <div class="col-sm-4 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                         <a href="#portfolioModal1_fotos" class="portfolio-link" data-toggle="modal">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/001.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/001.png" class="img-responsive img-fluid" >
                         </a>
                         </div>
                         <div class="col-sm-4 portfolio-item" data-aos="fade-up" data-aos-duration="500">
                             <a href="#portfolioModal2_fotos" class="portfolio-link" data-toggle="modal">
-                                <img src="http://gescol.cl/samuelsilva/img/fotos/002.png" class="img-fluid img-responsive" >
+                                <img src="img/fotos/002.png" class="img-fluid img-responsive" >
                             </a>
                         </div>
                         <div class="col-sm-4 portfolio-item" data-aos="zoom-outskills" data-aos-duration="500">
                             <a href="#portfolioModal3_fotos" class="portfolio-link" data-toggle="modal">
-                                <img src="http://gescol.cl/samuelsilva/img/fotos/003.png" class="img-fluid img-responsive" >
+                                <img src="img/fotos/003.png" class="img-fluid img-responsive" >
                             </a>
                         </div>           
                     </div>        
@@ -611,7 +611,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/001.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/001.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
@@ -631,7 +631,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/002.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/002.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
@@ -651,7 +651,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/003.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/003.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
@@ -671,7 +671,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/004.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/004.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
@@ -691,7 +691,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/005.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/005.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
@@ -712,7 +712,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <img src="http://gescol.cl/samuelsilva/img/fotos/006.png" class="img-responsive img-fluid" >
+                            <img src="img/fotos/006.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
