--- a/index.html
+++ b/index.html
@@ -225,6 +225,26 @@
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/prevsis.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/dtg.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -502,15 +522,15 @@
                             <p style="text-align: left;">Desarrollando en ambiente linux con el lenguaje php, laravel y el motor de base de datos Oracle. El proyecto usa como servidor de versiones Git. Mis funciones son la creación CMS ofertas para el Ministerio de Desarrollo Social.</p>
                             <ul class="list-inline item-details">
                                 <li>Cliente:
-                                    <strong><a href="http://gescol.cl">Actis SpA</a>
+                                    <strong><a href="http://actis.cl">Actis SpA</a>
                                     </strong>
                                 </li>
                                 <li>Fecha:
-                                    <strong><a href="http://gescol.cl">Noviembre 2020 a Febrero 2021</a>
+                                    <strong><a href="http://actis.cl">Noviembre 2020 a Febrero 2021</a>
                                     </strong>
                                 </li>
                                 <li>Servicio:
-                                    <strong><a href="http://gescol.cl">Desarrollo Web | Soportes Informáticos</a>
+                                    <strong><a href="http://actis.cl">Desarrollo Web | Soportes Informáticos</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -539,15 +559,89 @@
                             <p style="text-align: left;">Desarrollando en ambiente linux con el lenguaje php, prototype y el motor de base de datos PostgreSql. El proyecto usa como servidor de versiones Git. Mis funciones fueron la de actualización módulos Abastecimiento, Farmacia y Pabellón</p>
                             <ul class="list-inline item-details">
                                 <li>Cliente:
-                                    <strong><a href="http://gescol.cl">Sistemas Expertos SpA</a>
+                                    <strong><a href="http://sistemasexpertos.cl">Sistemas Expertos SpA</a>
                                     </strong>
                                 </li>
                                 <li>Fecha:
-                                    <strong><a href="http://gescol.cl">Febrero 2019 a Octubre 2020</a>
+                                    <strong><a href="http://sistemasexpertos.cl">Febrero 2019 a Octubre 2020</a>
                                     </strong>
                                 </li>
                                 <li>Servicio:
-                                    <strong><a href="http://gescol.cl">Desarrollo Web | Soportes Informáticos</a>
+                                    <strong><a href="http://sistemasexpertos.cl">Desarrollo Web | Soportes Informáticos</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Grupo DTG SpA</h2>
+                            <hr >
+                            <img src="img/portfolio/seis.png" class="img-responsive img-centered" alt="">
+                            <p style="text-align: left;">Desarrollando para debian con los lenguajes php, jquery y el motor de base de datos mysql. Mis funciones son actualizar el sitio administrativo Energy. Además, se desarrolló una aplicación de escritorio para conexiones del tipo Websocket entre equipos Transbank y un sistema web y un sistema de transportes de contenedores hecho en php, mysql y un framework propietario.</p>
+                            <ul class="list-inline item-details">
+                                <li>Cliente:
+                                    <strong><a href="http://grupodtg.cl">Grupo DTG SpA</a>
+                                    </strong>
+                                </li>
+                                <li>Fecha:
+                                    <strong><a href="http://grupodtg.cl">Febrero 2018 a Agosto 2018</a>
+                                    </strong>
+                                </li>
+                                <li>Servicio:
+                                    <strong><a href="http://grupodtg.cl">Desarrollo Web | Soportes Informáticos</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Prevsis</h2>
+                            <hr >
+                            <img src="img/portfolio/seis.png" class="img-responsive img-centered" alt="">
+                            <p style="text-align: left;">Desarrollando en ambientes Windows con los lenguajes ASP.NET (VB.net), jquery y el motor de base de datos SqlServer usando Procedimientos Almacenados. El proyecto se usa para versionamiento Sourcetree. Mis funciones son actualización módulos Auditoría, Investigación de Incidentes y Dashboard de sistema SGR4 de Prevsis.</p>
+                            <ul class="list-inline item-details">
+                                <li>Cliente:
+                                    <strong><a href="http://prevsis.com">Prevsis</a>
+                                    </strong>
+                                </li>
+                                <li>Fecha:
+                                    <strong><a href="http://prevsis.com">Septiembre 2018 a Febrero 2019</a>
+                                    </strong>
+                                </li>
+                                <li>Servicio:
+                                    <strong><a href="http://prevsis.com">Desarrollo Web | Soportes Informáticos</a>
                                     </strong>
                                 </li>
                             </ul>
