--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -592,7 +592,7 @@
                         <div class="modal-body">
                             <h2>Grupo DTG SpA</h2>
                             <hr >
-                            <img src="img/portfolio/seis.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/dtg.png" class="img-responsive img-centered" alt="">
                             <p style="text-align: left;">Desarrollando para debian con los lenguajes php, jquery y el motor de base de datos mysql. Mis funciones son actualizar el sitio administrativo Energy. Además, se desarrolló una aplicación de escritorio para conexiones del tipo Websocket entre equipos Transbank y un sistema web y un sistema de transportes de contenedores hecho en php, mysql y un framework propietario.</p>
                             <ul class="list-inline item-details">
                                 <li>Cliente:
@@ -615,7 +615,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -629,7 +629,7 @@
                         <div class="modal-body">
                             <h2>Prevsis</h2>
                             <hr >
-                            <img src="img/portfolio/seis.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/prevsis.png" class="img-responsive img-centered" alt="">
                             <p style="text-align: left;">Desarrollando en ambientes Windows con los lenguajes ASP.NET (VB.net), jquery y el motor de base de datos SqlServer usando Procedimientos Almacenados. El proyecto se usa para versionamiento Sourcetree. Mis funciones son actualización módulos Auditoría, Investigación de Incidentes y Dashboard de sistema SGR4 de Prevsis.</p>
                             <ul class="list-inline item-details">
                                 <li>Cliente:
