--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <div class="row">
             <div class="col-lg-12"> 
                 <div class="intro-text col-md-12">
-                    <h1 class="name">Samuel Silva</h1>
+                    <h1 class="name" style="font-size: 60px; font-weight: bolder; color: #FFF">Samuel Silva</h1>
                 </div>
                 <hr class="col-md-8 hr-intro">
                 <div class="intro-text col-md-12">
-                    <span class="skills">Analista Programador Sr</span>
+                    <h3 class="name" style="font-size: 24px; font-weight: bolder; color: #FFF">Desarrollador Sr</h3>
                 </div>
             </div>
         </div>
