--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
                       <div class="progress-bar progress-bar-warning " role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%; text-align: left; padding-left: 10px; color:#000   ">
-                            Mysql / MariaDB / MongoDB / SQLServer / Oracle / Postgre
+                            Mysql / MariaDB / MongoDB / SQLServer / Oracle / PostgreSQL
                       </div>
                     </div>
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
