--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             Curriculum Vitae
                           </div>
                           <div class="modal-body">
-                              <iframe src="cvs/cv_20210126.pdf" width="1200" height="550"></iframe>
+                              <iframe src="cvs/cv_202100202.pdf" width="1200" height="550"></iframe>
                           </div>
                           <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
@@ -526,7 +526,7 @@
                                     </strong>
                                 </li>
                                 <li>Fecha:
-                                    <strong><a href="http://actis.cl">Noviembre 2020 a Febrero 2021</a>
+                                    <strong><a href="http://actis.cl">Noviembre 2020 a la fecha</a>
                                     </strong>
                                 </li>
                                 <li>Servicio:
