--- a/index.html
+++ b/index.html
@@ -214,6 +214,16 @@
                     </a>
                 </div>
                 <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                    <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/logo_Apiux.png" class="img-responsive" alt="Slice of cake">
+                    </a>
+                </div>
+                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -305,7 +315,7 @@
                 <div class="col-lg-12">
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%; text-align: left; padding-left: 10px; color:#000 ">
-                            PHP / .NET / Python
+                            PHP / .NET / Java / Python
                         </div>
                     </div>
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
@@ -470,10 +480,46 @@
                                     </strong>
                                 </li>
                                 <li>Fecha:
-                                    <strong>Enero 2013 a la fecha</strong>
+                                    <strong>Enero 2013 a Octubre 2017</strong>
                                 </li>
                                 <li>Servicio:
                                     <strong>Desarrollo Web | Soportes Informáticos | Mantención equipos y redes 
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Apiux SpA</h2>
+                            <hr >
+                            <img src="img/portfolio/logo_Apiux.png" class="img-responsive img-centered" alt="">
+                            <p style="text-align: left;">Apoyo en el área de IoT el desarrollo y mantención de Portal Iot de SMA, además de las conexiones en línea de datos en tiempo real de empresas reguladas por la SMA.</p>
+                            <ul class="list-inline item-details">
+                                <li>Cliente:
+                                    <strong>Apiux SpA</a>
+                                    </strong>
+                                </li>
+                                <li>Fecha:
+                                    <strong>MAYO 2021 A MAYO 2022</strong>
+                                </li>
+                                <li>Servicio:
+                                    <strong>Desarrollo Web | Soporte IoT
                                     </strong>
                                 </li>
                             </ul>
