--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a href="#skills">Conocimientos</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#galeria">Galería</a>
+                        <a href="#proyectos">Proyectos</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contacto</a>
@@ -344,33 +344,26 @@
     </section>
     
     <!-- Galeria Section -->
-    <section id="galeria" data-aos="fade" data-aos-duration="500">
+    <section id="proyectos" data-aos="fade" data-aos-duration="500">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 >Galería</h2>
+                    <h2 >Proyectos</h2>
                     <hr class="linea-negra">
                 </div>
             </div>
             <div class="row">
                 <div class="offset-md-2 col-lg-12">
                     <div class="row">
-                        <div class="col-sm-4 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
-                        <a href="#portfolioModal1_fotos" class="portfolio-link" data-toggle="modal">
-                            <img src="img/fotos/001.png" class="img-responsive img-fluid" >
-                        </a>
-                        </div>
-                        <div class="col-sm-4 portfolio-item" data-aos="fade-up" data-aos-duration="500">
-                            <a href="#portfolioModal2_fotos" class="portfolio-link" data-toggle="modal">
-                                <img src="img/fotos/002.png" class="img-fluid img-responsive" >
+                        <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                            <a href="#portfolioModal1_fotos" class="portfolio-link" data-toggle="modal">
+                                <img src="img/proys/inventory.png" class="img-responsive img-fluid" >
                             </a>
                         </div>
-                        <div class="col-sm-4 portfolio-item" data-aos="zoom-outskills" data-aos-duration="500">
-                            <a href="#portfolioModal3_fotos" class="portfolio-link" data-toggle="modal">
-                                <img src="img/fotos/003.png" class="img-fluid img-responsive" >
-                            </a>
-                        </div>           
-                    </div>        
+                        <div class="col-md-8 m-2" style="font-size: 16px;">
+                            <p>Sistema POS (Point of Sale) desde cero utilizando el lenguaje de programación PHP en su versión 8 e integrando varios recursos que te permiten proporcionar características útiles para cualquier empresa que desee crear un punto de venta hecho a medida</p>
+                        </div>
+                    </div>      
                 </div>
             </div>
         </div>
@@ -805,9 +798,9 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-12">
                         <div class="modal-body">
-                            <img src="img/fotos/001.png" class="img-responsive img-fluid" >
+                            <img src="img/proys/inventory.png" class="img-responsive img-fluid" >
                         </div>
                     </div>
                 </div>
@@ -825,7 +818,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-12">
                         <div class="modal-body">
                             <img src="img/fotos/002.png" class="img-responsive img-fluid" >
                         </div>
