--- a/index.html
+++ b/index.html
@@ -315,12 +315,12 @@
                 <div class="col-lg-12">
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%; text-align: left; padding-left: 10px; color:#000 ">
-                            PHP / .NET / Java / Python
+                            PHP / .NET / Java / Python / R
                         </div>
                     </div>
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
                       <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%; text-align: left; padding-left: 10px; color:#000   ">
-                            JS / CSS / Jquery / Bootstrap / Vue / ReactJS
+                            JS / CSS / Jquery / Bootstrap / Vue / ReactJS / Angular
                       </div>
                     </div>
                     <div class="progress" data-aos="fade-right" data-aos-duration="500">
