fix bio: upd index and img

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         <img src="img/portfolio/yonley.png" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
-                <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
+                <!-- <div class="col-sm-3 portfolio-item" data-aos="zoom-out" data-aos-duration="500">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -324,7 +324,7 @@
                         </div>
                         <img src="img/portfolio/pilsoft.png" class="img-responsive" alt="Slice of cake">
                     </a>
-                </div>
+                </div> -->
                 
             </div>
         </div>
